--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -495,7 +495,7 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
-            mkdir /config && \
+            mkdir -p /config && \
             aws ssm get-parameter --name "/ticketon/eureka/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/eureka/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:latest && \
@@ -543,7 +543,7 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
-            mkdir /config && \
+            mkdir -p /config && \
             aws ssm get-parameter --name "/ticketon/eureka/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/eureka/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:${{ github.ref_name }} && \
