--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,11 +52,18 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
+            mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/app/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
+            aws ssm get-parameter --name "/ticketon/app/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
             docker stop app 2>/dev/null || true && \
             docker rm app 2>/dev/null || true && \
-            docker run -d --name app --network env_common -p 9000:9000 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
-            docker image prune -a -f|| true
+            docker run -d --name app \
+            -v /config/application.yml:/app/config/application.yml \
+            -v /config/application-secret.yml:/app/config/application-secret.yml \
+            -p 9001:9001 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
+            docker image prune -a -f || true
   deployAppServerUsingTag:
     runs-on: ubuntu-latest
     if: inputs.selectServer == 'app' && startsWith(github.ref, 'refs/tags/')
@@ -93,10 +100,17 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
+            mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/app/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
+            aws ssm get-parameter --name "/ticketon/app/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:${{ github.ref_name }} && \
             docker stop app 2>/dev/null || true && \
             docker rm app 2>/dev/null || true && \
-            docker run -d --name app --network env_common -p 9000:9000 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:${{ github.ref_name }} && \
+            docker run -d --name app \
+            -v /config/application.yml:/app/config/application.yml \
+            -v /config/application-secret.yml:/app/config/application-secret.yml \
+            -p 9001:9001 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:${{ github.ref_name }} && \
             docker image prune -a -f || true
 
   deployBrokerServer:
