--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,7 +13,7 @@ COPY . .
 RUN chmod +x ./gradlew
 # Build the 'broker' module, skipping tests for a faster build.
 # The --no-daemon option is recommended for CI/CD and containerized environments.
-RUN ./gradlew :broker:build -x test --no-daemon
+RUN ./gradlew :app:build -x test --no-daemon
 
 # =================================================================
 # Stage 2: Create the final, minimal production image
@@ -24,10 +24,7 @@ FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
 
 # Copy the built JAR file from the builder stage
-COPY --from=builder /app/broker/build/libs/*.jar app.jar
-
-# Expose the port the application runs on
-EXPOSE 8080
+COPY --from=builder /app/app/build/libs/*.jar app.jar
 
 # Command to run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
