--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -252,10 +252,17 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
+            mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/dispatcher/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
+            aws ssm get-parameter --name "/ticketon/dispatcher/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:latest && \
             docker stop dispatcher 2>/dev/null || true && \
             docker rm dispatcher 2>/dev/null || true && \
-            docker run -d --name dispatcher --network env_common -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:latest && \
+            docker run -d --name dispatcher \
+            -v /config/application.yml:/app/config/application.yml \
+            -v /config/application-secret.yml:/app/config/application-secret.yml \
+            -p 9001:9001 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:latest && \
             docker image prune -a -f || true
   deployDispatchServerUsingTag:
     runs-on: ubuntu-latest
@@ -294,10 +301,17 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
+            mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/dispatcher/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
+            aws ssm get-parameter --name "/ticketon/dispatcher/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:${{ github.ref_name }} && \
             docker stop dispatcher 2>/dev/null || true && \
             docker rm dispatcher 2>/dev/null || true && \
-            docker run -d --name dispatcher --network env_common -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:${{ github.ref_name }} && \
+            docker run -d --name dispatcher \
+            -v /config/application.yml:/app/config/application.yml \
+            -v /config/application-secret.yml:/app/config/application-secret.yml \
+            -p 9001:9001 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-dispatcher-deploy:${{ github.ref_name }} && \
             docker image prune -a -f || true
 
   deployAuthServer:
