--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -440,6 +440,7 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
             mkdir /config && \
             aws ssm get-parameter --name "/ticketon/gateway/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/gateway/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
@@ -491,6 +492,7 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
             mkdir /config && \
             aws ssm get-parameter --name "/ticketon/gateway/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/gateway/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
@@ -540,6 +542,7 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config 
             mkdir -p /config
             aws ssm get-parameter --name "/ticketon/eureka/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:latest
