--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -349,12 +349,13 @@ jobs:
           command: |
             rm -rf /config && \
             mkdir /config && \
-            aws ssm get-parameter --name "/ticketon/auth/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
+            aws ssm get-parameter --name "/ticketon/auth/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
             aws ssm get-parameter --name "/ticketon/auth/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:latest && \
             docker stop auth 2>/dev/null || true && \
             docker rm auth 2>/dev/null || true && \
             docker run -d --name auth \
+            -v /config/application-prod.yml:/app/config/application-prod.yml \
             -v /config/application.yml:/app/config/application.yml \
             -v /config/application-secret.yml:/app/config/application-secret.yml \
             -p 9001:9001 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:latest && \
