--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,12 +54,14 @@ jobs:
           command: |
             rm -rf /config && \
             mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/app/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
             aws ssm get-parameter --name "/ticketon/app/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/app/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
             docker stop app 2>/dev/null || true && \
             docker rm app 2>/dev/null || true && \
             docker run -d --name app \
+            -v /config/application-prod.yml:/app/config/application-prod.yml \
             -v /config/application.yml:/app/config/application.yml \
             -v /config/application-secret.yml:/app/config/application-secret.yml \
             -p 9000:9000 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
@@ -102,12 +104,14 @@ jobs:
           command: |
             rm -rf /config && \
             mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/app/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
             aws ssm get-parameter --name "/ticketon/app/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/app/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:${{ github.ref_name }} && \
             docker stop app 2>/dev/null || true && \
             docker rm app 2>/dev/null || true && \
             docker run -d --name app \
+            -v /config/application-prod.yml:/app/config/application-prod.yml \
             -v /config/application.yml:/app/config/application.yml \
             -v /config/application-secret.yml:/app/config/application-secret.yml \
             -p 9000:9000 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:${{ github.ref_name }} && \
