--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -162,11 +162,13 @@ jobs:
             aws ssm get-parameter --name "/ticketon/broker/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
             aws ssm get-parameter --name "/ticketon/broker/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/broker/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
+            PRIVATE_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4) && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-broker-deploy:latest && \
             docker stop broker 2>/dev/null || true && \
             docker rm broker 2>/dev/null || true && \
             docker run -d --name broker \
             --restart unless-stopped \
+            -e EUREKA_INSTANCE_IP_ADDRESS=$PRIVATE_IP \
             -v /config/application-prod.yml:/app/config/application-prod.yml \
             -v /config/application.yml:/app/config/application.yml \
             -v /config/application-secret.yml:/app/config/application-secret.yml \
@@ -215,11 +217,13 @@ jobs:
             aws ssm get-parameter --name "/ticketon/broker/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
             aws ssm get-parameter --name "/ticketon/broker/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/broker/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
+            PRIVATE_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4) && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-broker-deploy:${{ github.ref_name }} && \
             docker stop broker 2>/dev/null || true && \
             docker rm broker 2>/dev/null || true && \
             docker run -d --name broker \
             --restart unless-stopped \
+            -e EUREKA_INSTANCE_IP_ADDRESS=$PRIVATE_IP \
             -v /config/application-prod.yml:/app/config/application-prod.yml \
             -v /config/application.yml:/app/config/application.yml \
             -v /config/application-secret.yml:/app/config/application-secret.yml \
