--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -28,6 +28,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/ # Eureka 서버 주소
+      hostname: ${EUREKA_CLIENT_HOST_NAME}
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 custom:
