--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -30,9 +30,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka/ # Eureka 서버 주소
       hostname: ${EUREKA_CLIENT_HOST_NAME}
   instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    instance-id: ${spring.application.name}:${server.port}:${random.value}
 custom:
-  instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   events:
     url: http://localhost:9000
 
